# stackelberg-tariff-qlearning

./: .gitignore  LICENSE  README.md  README_EconPayoff.md  README_MARL.md  README_SimplePayoff.md  marl_q3_followers.py  pyproject.toml  stackelberg_q3_tariff_econ_sim.py  test_multiagent_simplePayoff_sim.py  test_stackelberg_q3_tariff_econ.py  test_stackelberg_q3_tariff_simplePayoff.py
econ/: analysis.py  stackelberg_q3_tariff_econ_sim.py  stackelberg_q3_tariff_econ_sim_v2.py  test_stackelberg_q3_tariff_econ.py  test_stackelberg_q3_tariff_econ_v2.py
marl/: stackelberg_q3_tariff_MultiFollower_sim.py
simple_payoff/: stackelberg_q3_tariff_simplePayoff_sim.py
