[project]
name = "tariffwar_q3"
version = "0.2.0"
description = "Multi-agents simulation environment for evoluationary games."
requires-python = "==3.12.1"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=1.26,<3.0",
    "openai>=1.77.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "matplotlib>=3.8.0",
    "pyproj<3.7",
    "torch==2.4.*",
    "torchvision==0.19.*",
    "torchaudio==2.4.*",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
]
